Adicionei pagina de contactos vazia

--- a/trabalhoTeste/Home.html
+++ b/trabalhoTeste/Home.html
@@ -38,7 +38,7 @@
 	<div id="ContACTOS">
 		<script type="text/javascript">
 			document.getElementById("ContACTOS").onclick = function () {
-				location.href = "OndePodes.html";
+				location.href = "Contacto.html";
 			};
 		</script>
 		<span>ContACTOS</span>
@@ -56,7 +56,7 @@
 		</rect>
 	</svg>
 	<div id="Programa_BrightStart__O_futuro">
-		<span>Programa BrightStart</span><span style="font-size:100px;"> </span><br><span style="font-style:normal;font-weight:bold;font-size:60px;">O futuro pode ser brilhante !</span>
+		<span>Programa BrightStart</span><span style="font-family:Arial, Helvetica, sans-serif;font-size:100px;"> </span><br><span style="font-family:Arial, Helvetica, sans-serif;font-style:normal;font-weight:bold;font-size:60px;font-family: Arial, Helvetica, sans-serif;">O futuro pode ser brilhante !</span>
 	</div>
 	<div id="Inscreve-te_j_ou_aprende_mais_">
 		<span>Inscreve-te já ou aprende mais sobre o funcionamento do<br/>curso, lê as perguntas mais frequentes ou vê o testemunho de<br/>alguns dos nossos alunos!</span>
@@ -84,7 +84,7 @@
 		</path>
 	</svg>
 	<div id="Sobre_o_BrightStart">
-		<span>Sobre o</span><br><span style="font-style:normal;font-weight:bold;">BrightStart</span>
+		<span>Sobre o</span><br><span style="font-family:Arial, Helvetica, sans-serif;font-style:normal;font-weight:bold;">BrightStart</span>
 	</div>
 	<div id="O_BrightStart__um_programa_de_">
 		<span>O BrightStart é um programa de aceleração de competências para os finalistas <br/>do ensino secundário que pretendam ingressar na área das Tecnologias <br/>Informáticas. É uma oportunidade para adquirirem, enquanto estudam, <br/>conhecimentos e competências práticas em ambiente real de trabalho.</span>
@@ -92,9 +92,9 @@
 	<div id="O_Programa_BrightStart_atualme">
 		<span>O Programa BrightStart atualmente está presente no Instituto Politécnico de Setúbal, Politécnico de Leiria e Politécnico de Viseu.</span>
 	</div>
-	<img id="ea0c65df3d03e9121144b03d086af3" src="imgs/2miudos.png" srcset="2miudos.png">
+	<img id="ea0c65df3d03e9121144b03d086af3" src="imgs/2miudos.png" srcset="imgs/2miudos.png">
 		
-	<img id="logo-deloitte-photoshop" src="imgs/logodeloitte.svg" srcset="logodeloitte.svg">
+	<img id="logo-deloitte-photoshop" src="logodeloitte.svg" srcset="imgs/logodeloitte.svg">
 		
 	<svg class="Rectangle_6">
 		<rect onclick="application.goToTargetView(event)" id="Rectangle_6" rx="28" ry="28" x="0" y="0" width="183" height="56">
@@ -104,7 +104,7 @@
 		<span>SABER MAIS</span>
 	</div>
 	<div id="Onde_podes_comear_a_tua_carrei">
-		<span>Onde podes,</span><br><span style="font-style:normal;font-weight:bold;">começar a tua carreira?</span><span>                </span>
+		<span>Onde podes,</span><br><span style="font-family:Arial, Helvetica, sans-serif;font-style:normal;font-weight:bold;">começar a tua carreira?</span><span>                </span>
 	</div>
 	<svg class="Path_39_" viewBox="903.31 2284.492 1096.491 826.543">
 		<linearGradient id="Path_39_" spreadMethod="pad" x1="0.185" x2="1.411" y1="0.701" y2="0.345">
@@ -114,7 +114,7 @@
 		<path id="Path_39_" d="M 1920 2390.518798828125 C 1920 2390.518798828125 1651.096557617188 2176.25439453125 1438.932739257813 2356.90869140625 C 1226.768920898438 2537.56298828125 1357.008056640625 2581.676513671875 1048.215209960938 2665.70166015625 C 739.42236328125 2749.726806640625 955.7874755859375 3213.96630859375 1399.020751953125 3064.821533203125 C 1842.254028320313 2915.6767578125 1999.801391601563 3111.03564453125 1999.801391601563 3111.03564453125 L 1920 2390.518798828125 Z">
 		</path>
 	</svg>
-	<img id="png-transparent-women-s-blue-d" src="imgs/raparigaOculos.png" srcset="raparigaOculos.png 1x">
+	<img id="png-transparent-women-s-blue-d" src="imgs/raparigaOculos.png" srcset="imgs/raparigaOculos.png 1x">
 		
 	<div id="Group_1">
 		<div id="INSCRIES_">
@@ -127,7 +127,7 @@
 		</div>
 	</div>
 	<div id="Group_47">
-		<img id="transferir" src="imgs/bs.png" srcset="bs.png">
+		<img id="transferir" src="imgs/bs.png" srcset="imgs/bs.png">
 			
 		<svg class="Path_40_bf" viewBox="-204.616 3352.804 1084.2 1116.945">
 			<linearGradient id="Path_40_bf" spreadMethod="pad" x1="0.48" x2="-0.452" y1="0.5" y2="1.104">
@@ -138,7 +138,7 @@
 			</path>
 		</svg>
 		<div id="Opinies_Relacionados">
-			<span>Opiniões Relacionados</span>
+			<span>Testemunhos</span>
 		</div>
 		<svg class="Rectangle_7">
 			<rect id="Rectangle_7" rx="74" ry="74" x="0" y="0" width="609.227" height="395.858">
@@ -182,7 +182,7 @@
 				</svg>
 			</div>
 		</div>
-		<img id="Mask_Group_1" src="imgs/homemTemplate.png" srcset="homemTemplate.png">
+		<img id="Mask_Group_1" src="imgs/homemTemplate.png" srcset="imgs/homemTemplate.png">
 			
 		</svg>
 		<div id="Exemplo_do_comentrio_">
@@ -214,10 +214,10 @@
 			<path id="star_ca" d="M 25.93228149414063 9.907008171081543 C 25.7620792388916 9.380535125732422 25.29511642456055 9.006608963012695 24.74266052246094 8.956822395324707 L 17.23837852478027 8.275423049926758 L 14.27097606658936 1.32990300655365 C 14.05217456817627 0.8208897709846497 13.55387210845947 0.4913978576660156 13.00022602081299 0.4913978576660156 C 12.44657897949219 0.4913978576660156 11.94827651977539 0.8208888173103333 11.7294750213623 1.331096410751343 L 8.762072563171387 8.275397300720215 L 1.256574273109436 8.956796646118164 C 0.7051069140434265 9.007778167724609 0.2393351197242737 9.380513191223145 0.06814737617969513 9.906982421875 C -0.1030449345707893 10.43345546722412 0.05505499243736267 11.01090717315674 0.4722250699996948 11.37491607666016 L 6.144577026367188 16.34961318969727 L 4.47192907333374 23.71764183044434 C 4.34953498840332 24.25938987731934 4.559806823730469 24.81938362121582 5.0093092918396 25.14431571960449 C 5.250922679901123 25.31888008117676 5.533597946166992 25.40775108337402 5.818655014038086 25.40775108337402 C 6.06443452835083 25.40775108337402 6.308229923248291 25.34149551391602 6.527030467987061 25.2105712890625 L 13.00022315979004 21.3417797088623 L 19.47102737426758 25.2105712890625 C 19.94453430175781 25.49542808532715 20.54142570495605 25.46944236755371 20.98994255065918 25.14431571960449 C 21.43964385986328 24.81839561462402 21.64971733093262 24.25820159912109 21.52732086181641 23.71764183044434 L 19.85467338562012 16.34961318969727 L 25.52702522277832 11.37590599060059 C 25.9441967010498 11.01090621948242 26.10349082946777 10.43444442749023 25.93229293823242 9.906981468200684 Z M 25.93228149414063 9.907008171081543">
 			</path>
 		</svg>
-		<img id="Mask_Group_2" src="imgs/homemTemplate.png" srcset="homemTemplate.png">
+		<img id="Mask_Group_2" src="imgs/homemTemplate.png" srcset="imgs/homemTemplate.png">
 			
 		</svg>
-		<img id="Mask_Group_3" src="imgs/homemTemplate.png" srcset="homemTemplate.png">
+		<img id="Mask_Group_3" src="imgs/homemTemplate.png" srcset="imgs/homemTemplate.png">
 			
 		</svg>
 		<div id="Exemplo_de_comentrio">
@@ -351,7 +351,7 @@
 			</path>
 		</svg>
 	</div>
-	<img id="skyscraper-5489696_1920" src="imgs/edificioDeloitte.png" srcset="edificioDeloitte.png">
+	<img id="skyscraper-5489696_1920" src="imgs/edificioDeloitte.png" srcset="imgs/edificioDeloitte.png">
 		
 	<svg class="Rectangle_12">
 		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
@@ -361,7 +361,7 @@
 		<rect id="Rectangle_13" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
 		</rect>
 	</svg>
-	<img id="pngwingcom" src="imgs/rapazVerde.png" srcset="rapazVerde.png">
+	<img id="pngwingcom" src="imgs/rapazVerde.png" srcset="imgs/rapazVerde.png">
 		
 	<svg class="Rectangle_14">
 		<rect id="Rectangle_14" rx="0" ry="0" x="0" y="0" width="424" height="129">
