--- a/trabalhoTeste/Sobre.html
+++ b/trabalhoTeste/Sobre.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sobre</title>
-<script type="text/javascript" src="js/Sobre.js"></script>
+<script type="text/javascript" src="imgs/js/Sobre.js"></script>
 <link rel="stylesheet" href="css/Sobre.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
 	<div id="ContACTOS">
 		<script type="text/javascript">
 			document.getElementById("ContACTOS").onclick = function () {
-				location.href = "OndePodes.html";
+				location.href = "Contacto.html";
 			};
 		</script>
 		<span>ContACTOS</span>
@@ -51,7 +51,7 @@
 		<span>ONDE ESTAMOS?</span>
 	</div>
 	<div id="Sobre_o_BrightStart">
-		<span>Sobre o</span><span style="font-size:100px;"></span><br><span style="font-style:normal;font-weight:bold;font-size:60px;">BrightStart</span>
+		<span>Sobre o</span><span style="font-size:100px;"></span><br><span style="font-style:normal;font-family:Arial, Helvetica, sans-serif;font-weight:bold;font-size:60px;">BrightStart</span>
 	</div>
 	<div id="O_BrightStart__um_programa_de_">
 		<span>O BrightStart é um programa de aceleração de competências para os finalistas do ensino secundário que pretendam ingressar na área das Tecnologias Informáticas. É uma oportunidade para adquirirem, enquanto estudam, conhecimentos e competências práticas em ambiente real de trabalho.<br/><br/>Este programa pretende ter uma abrangência nacional, tendo sido lançado pela primeira vez em 2017 no Instituto Politécnico de Setúbal. Face ao sucesso alcançado, em 2019, arrancou no Politécnico de Leiria e no Instituto Politécnico de Viseu.<br/><br/>A participação no programa está sujeita a um processo de seleção definido e implementado pelas entidades gestoras do programa (Deloitte e respetivos Politécnicos). Após a candidatura, os estudantes são selecionados através de uma dinâmica de grupo, uma entrevista com um Manager e um Sócio da Deloitte.<br/><br/>Os candidatos selecionados terão as propinas asseguradas pela Deloitte ao longo de todo o curso e, adicionalmente, serão remunerados com uma bolsa mensal pela sua participação nos projetos da Deloitte.</span>
@@ -63,7 +63,7 @@
 		<path id="Line_1" d="M 0 0 L 37 0">
 		</path>
 	</svg>
-	<img id="logo-deloitte-photoshop" src="logo-deloitte-photoshop.png" srcset="logo-deloitte-photoshop.png 1x, logo-deloitte-photoshop@2x.png 2x">
+	<img id="logo-deloitte-photoshop" src="imgs/logodeloitte.svg" srcset="imgs/logodeloitte.svg>
 		
 	<div id="Group_1">
 		<div id="INSCRIES_">
@@ -147,7 +147,7 @@
 			</path>
 		</svg>
 	</div>
-	<img id="skyscraper-5489696_1920" src="skyscraper-5489696_1920.png" srcset="skyscraper-5489696_1920.png 1x, skyscraper-5489696_1920@2x.png 2x">
+	<img id="skyscraper-5489696_1920" src="imgs/edificioDeloitte.png" srcset="imgs/edificioDeloitte.png">
 		
 	<svg class="Rectangle_12">
 		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
@@ -157,7 +157,7 @@
 		<rect id="Rectangle_13" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
 		</rect>
 	</svg>
-	<img id="transferir" src="transferir.png" srcset="transferir.png 1x, transferir@2x.png 2x">
+	<img id="transferir" src="imgs/bs.png" srcset="imgs/bs.png 1x">
 		
 </div>
 </body>
