--- a/trabalhoTeste/Inscricao.html
+++ b/trabalhoTeste/Inscricao.html
@@ -37,7 +37,7 @@
 	<div id="ContACTOS">
 		<script type="text/javascript">
 			document.getElementById("ContACTOS").onclick = function () {
-				location.href = "OndePodes.html";
+				location.href = "Contacto.html";
 			};
 		</script>
 		<span>ContACTOS</span>
@@ -51,12 +51,12 @@
 		<span>ONDE ESTAMOS?</span>
 	</div>
 	<div id="Onde_podes_comear_a_tua_carrei">
-		<span>Onde podes,</span><span style="font-size:100px;"></span><br><span style="font-style:normal;font-weight:bold;font-size:60px;">começar a tua carreira?       </span>
+		<span>Onde podes,</span><span style="font-size:100px;"></span><br><span style="font-style:normal;font-weight:bold;font-size:60px;font-family: Arial, Helvetica, sans-serif;">começar a tua carreira?       </span>
 	</div>
 	<div id="Para_pedidos_ou_dvidas_que_nec">
 		<span>Para pedidos ou dúvidas que necessitem de uma resposta personalizada, tentaremos fazer todos os esforços para responder dentro de um prazo de 48 horas. Se preferir contactar-nos por telefone ou fax, utilize o nosso Directório para aceder aos nossos contactos.<br/><br/>Os campos assinalados com asterisco (*) são obrigatórios.</span>
 	</div>
-	<img id="logo-deloitte-photoshop" src="logo-deloitte-photoshop.png" srcset="logo-deloitte-photoshop.png 1x, logo-deloitte-photoshop@2x.png 2x">
+	<img id="logo-deloitte-photoshop" src="imgs/logodeloitte.svg" srcset="imgs/logodeloitte.svg">
 	<svg class="Line_1" viewBox="0 0 97 2">
 		<path id="Line_1" d="M 0 0 L 97 0">
 		</path>
@@ -143,7 +143,7 @@
 			</path>
 		</svg>
 	</div>
-	<img id="skyscraper-5489696_1920" src="skyscraper-5489696_1920.png" srcset="skyscraper-5489696_1920.png 1x, skyscraper-5489696_1920@2x.png 2x">
+	<img id="skyscraper-5489696_1920" src="imgs/edificioDeloitte.png" srcset="imgs/edificioDeloitte.png">
 		
 	<svg class="Rectangle_12">
 		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
