--- a/trabalhoTeste/OndePodes.html
+++ b/trabalhoTeste/OndePodes.html
@@ -37,7 +37,7 @@
 	<div id="ContACTOS">
 		<script type="text/javascript">
 			document.getElementById("ContACTOS").onclick = function () {
-				location.href = "OndePodes.html";
+				location.href = "Contacto.html";
 			};
 		</script>
 		<span>ContACTOS</span>
@@ -51,16 +51,16 @@
 		<span>ONDE ESTAMOS?</span>
 	</div>
 	<div id="Onde_podes_comear_a_tua_carrei">
-		<span>Onde podes,</span><span style="font-size:100px;"></span><br><span style="font-style:normal;font-weight:bold;font-size:60px;">começar a tua carreira?       </span>
+		<span>Onde podes,</span><span style="font-size:100px;"></span><br><span style="font-style:normal;font-family:Arial, Helvetica, sans-serif;font-weight:bold;font-size:60px;">começar a tua carreira?       </span>
 	</div>
 	<div id="O_Programa_BrightStart_atualme">
-		<span>O Programa BrightStart atualmente está presente no Instituto Politécnico de Setúbal, Politécnico de Leiria e Politécnico de Viseu.<br/></span><br><span style="font-style:normal;font-weight:bold;">Mais informações disponíveis através dos seguintes contactos:</span><br><span> <br/></span><br><span style="font-style:normal;font-weight:bold;">Instituto Politécnico de Setúbal</span><br><span><br/>Email: brightstart@deloitte.pt<br/>Telefone: 210 422 932<br/></span><br><span style="font-style:normal;font-weight:bold;">Politécnico de Leiria</span><br><span><br/>Email: brightstartIPL@deloitte.pt<br/>Telefone: 210 422 935<br/></span><br><span style="font-style:normal;font-weight:bold;">Politécnico de Viseu</span><br><span><br/>Email: brightstartIPV@deloitte.pt<br/>Telefone: 210 422 934</span>
+		<span>O Programa BrightStart atualmente está presente no Instituto Politécnico de Setúbal, Politécnico de Leiria e Politécnico de Viseu.<br/></span><br><span style="font-style:normal;font-family:Arial, Helvetica, sans-serif;font-weight:bold;">Mais informações disponíveis através dos seguintes contactos:</span><br><span> <br/></span><br><span style="font-style:normal;font-family:Arial, Helvetica, sans-serif;font-weight:bold;">Instituto Politécnico de Setúbal</span><br><span><br/>Email: brightstart@deloitte.pt<br/>Telefone: 210 422 932<br/></span><br><span style="font-style:normal;font-family:Arial, Helvetica, sans-serif;font-weight:bold;">Politécnico de Leiria</span><br><span><br/>Email: brightstartIPL@deloitte.pt<br/>Telefone: 210 422 935<br/></span><br><span style="font-style:normal;font-family:Arial, Helvetica, sans-serif;font-weight:bold;">Politécnico de Viseu</span><br><span><br/>Email: brightstartIPV@deloitte.pt<br/>Telefone: 210 422 934</span>
 	</div>
 	<svg class="Line_1" viewBox="0 0 90 2">
 		<path id="Line_1" d="M 0 0 L 100 0">
 		</path>
 	</svg>
-	<img id="logo-deloitte-photoshop" src="logo-deloitte-photoshop.png" srcset="logo-deloitte-photoshop.png 1x, logo-deloitte-photoshop@2x.png 2x">
+	<img id="logo-deloitte-photoshop" src="imgs/logodeloitte.svg" srcset="imgs/logodeloitte.svg">
 		
 	<div id="Group_1">
 		<div id="INSCRIES_">
@@ -144,7 +144,7 @@
 			</path>
 		</svg>
 	</div>
-	<img id="skyscraper-5489696_1920" src="skyscraper-5489696_1920.png" srcset="skyscraper-5489696_1920.png 1x, skyscraper-5489696_1920@2x.png 2x">
+	<img id="skyscraper-5489696_1920" src="imgs/edificioDeloitte.png" srcset="imgs/edificioDeloitte.png">
 		
 	<svg class="Rectangle_12">
 		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
@@ -154,7 +154,7 @@
 		<rect id="Rectangle_13" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
 		</rect>
 	</svg>
-	<img id="pngwingcom" src="pngwingcom.png" srcset="pngwingcom.png 1x, pngwingcom@2x.png 2x">
+	<img id="pngwingcom" src="imgs/rapazVerde.png" srcset="imgs/rapazVerde.png">
 		
 </div>
 </body>
