As imagens não estavam a funcionar, agora estão

--- a/trabalhoTeste/Sobre.html
+++ b/trabalhoTeste/Sobre.html
@@ -63,7 +63,7 @@
 		<path id="Line_1" d="M 0 0 L 37 0">
 		</path>
 	</svg>
-	<img id="logo-deloitte-photoshop" src="logo-deloitte-photoshop.png" srcset="logo-deloitte-photoshop.png 1x, logo-deloitte-photoshop@2x.png 2x">
+	<img id="logo-deloitte-photoshop" src="imgs/logodeloitte.svg" srcset="imgs/logodeloitte.svg">
 		
 	<div id="Group_1">
 		<div id="INSCRIES_">
@@ -147,7 +147,7 @@
 			</path>
 		</svg>
 	</div>
-	<img id="skyscraper-5489696_1920" src="skyscraper-5489696_1920.png" srcset="skyscraper-5489696_1920.png 1x, skyscraper-5489696_1920@2x.png 2x">
+	<img id="skyscraper-5489696_1920" src="imgs/edificioDeloitte.png" srcset="imgs/edificioDeloitte.png">
 		
 	<svg class="Rectangle_12">
 		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
@@ -157,7 +157,7 @@
 		<rect id="Rectangle_13" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
 		</rect>
 	</svg>
-	<img id="transferir" src="transferir.png" srcset="transferir.png 1x, transferir@2x.png 2x">
+	<img id="transferir" src="imgs/bs.png" srcset="imgs/bs.png">
 		
 </div>
 </body>
