--- a/trabalhoTeste/OndePodes.html
+++ b/trabalhoTeste/OndePodes.html
@@ -60,7 +60,7 @@
 		<path id="Line_1" d="M 0 0 L 100 0">
 		</path>
 	</svg>
-	<img id="logo-deloitte-photoshop" src="logo-deloitte-photoshop.png" srcset="logo-deloitte-photoshop.png 1x, logo-deloitte-photoshop@2x.png 2x">
+	<img id="logo-deloitte-photoshop" src="imgs/logodeloitte.svg" srcset="imgs/logodeloitte.svg">
 		
 	<div id="Group_1">
 		<div id="INSCRIES_">
@@ -144,7 +144,7 @@
 			</path>
 		</svg>
 	</div>
-	<img id="skyscraper-5489696_1920" src="skyscraper-5489696_1920.png" srcset="skyscraper-5489696_1920.png 1x, skyscraper-5489696_1920@2x.png 2x">
+	<img id="skyscraper-5489696_1920" src="imgs/edificioDeloitte.png" srcset="imgs/edificioDeloitte.png">
 		
 	<svg class="Rectangle_12">
 		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
@@ -154,7 +154,7 @@
 		<rect id="Rectangle_13" rx="0" ry="0" x="0" y="0" width="1920" height="1082">
 		</rect>
 	</svg>
-	<img id="pngwingcom" src="pngwingcom.png" srcset="pngwingcom.png 1x, pngwingcom@2x.png 2x">
+	<img id="pngwingcom" src="imgs/rapazVerde.png" srcset="imgs/rapazVerde.png">
 		
 </div>
 </body>
