Mudanca do projeto da versao teste para a versao 2
Nestas mudancas simplificou-se o html e css que tinham sido obtidos do AdobeXD para algo mais humanamente digestivel

--- a/trabalhoTeste/Inscricao.html
+++ b/trabalhoTeste/Inscricao.html
@@ -185,7 +185,7 @@
 		<span>Selecionar um tópico</span>
 	</div>
 	<div id="Ttulo">
-		<span>Título</span>
+		<span>*Habilitações Académicas</span>
 	</div>
 	<div id="Primeiro_Nome">
 		<span>*Primeiro Nome</span>
