--- a/trabalhoTeste/Contacto.html
+++ b/trabalhoTeste/Contacto.html
@@ -4,11 +4,15 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sobre – 2</title>
+<title>Contactos</title>
 <script type="text/javascript" src="js/Contacto.js"></script>
 <link rel="stylesheet" href="css/Contacto.css">
 </head>
+<img id="fundo" src="css/fundo.png" srcset="css/fundo.png" style="pointer-events:none;">
 <body>
-    <img id="vazio" src="imgs/vazio.jpg" srcset="imgs/vazio.jpg">
+    
+    <div id="teste" style="pointer-events:none;">
+       
+    </div>
 </body>
 </html>
