--- a/KEKW/index.html
+++ b/KEKW/index.html
@@ -25,7 +25,7 @@
             <img class="navbar-brand logo" href="#page-top" src="imgs/logodeloitte.svg" alt="..." />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto" style="margin-top: 0px">
                     <li class="nav-item"><a class="nav-link" href="#!">Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Contactos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Sobre</a></li>
