--- a/contactos.html
+++ b/contactos.html
@@ -25,7 +25,7 @@
             <img class="navbar-brand logo" href="#page-top" src="imgs/logodeloitte.svg" alt="..." />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto" style="margin-top: 0px">
                     <li class="nav-item"><a class="nav-link" href="#!">Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Contactos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Sobre</a></li>
@@ -43,7 +43,7 @@
         <div class="masthead-content">
             <div class="container px-5">
                 <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0">O futuro pode ser brilhante !</h2>
+                <h2 class="masthead-subheading mb-0">Descobre como contactar os politécnicos aderentes!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
@@ -57,20 +57,49 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Sobre o BrightStart</h2>
-                        <p>O BrightStart é um programa de aceleração de competências para os finalistas do ensino secundário que pretendam ingressar na área das Tecnologias Informáticas. É uma oportunidade para adquirirem, enquanto estudam, conhecimentos
-                            e competências práticas em ambiente real de trabalho.</p>
+                        <h2 class="display-4">Instituto Politécnico de Setúbal</h2>
+                        <p class="paragraphs">Email: brightstart@deloitte.pt<br>Telefone: 210 422 932</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Footer-->
-    <footer class="py-5 ">
+    <!-- Content section 2-->
+    <section>
         <div class="container px-5">
-            <img class="footer-img" src="css/edificioDeloitte.png" alt="..." />
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/03.png" alt="..." /></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Instituto Politécnico de Viseu</h2>
+                        <p class="paragraphs">Email: brightstartIPV@deloitte.pt<br>Telefone: 210 422 934</p>
+                    </div>
+                </div>
+            </div>
         </div>
+    </section>
+    <!-- Content section 3-->
+    <section>
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/03.png" alt="..." /></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Instituto Politécnico de Leiria</h2>
+                        <p class="paragraphs">Email: brightstartIPL@deloitte.pt<br>Telefone: 210 422 935
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer-->
+    <footer class="py-5">
+        <img class="m-0 footer-img" src="css/edificioDeloitte.png" alt="..." /></p>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
