--- a/sobre.html
+++ b/sobre.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Contactos - Brightstart</title>
+    <title>Sobre - Brightstart</title>
     <link rel="icon" type="image/x-icon" href="imgs/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <img class="navbar-brand logo" onclick="topFunction()" href="#top" src="imgs/logodeloitte.svg" alt="..." />
+            <img class="navbar-brand logo" onclick="topFunction()" href="#page-top" src="imgs/logodeloitte.svg" alt="..." />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
@@ -53,7 +53,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid " src="imgs/ips.jpg" alt="..." onclick="openIPS()" /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/01.png" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
@@ -69,7 +69,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipv.jpg" alt="..." onclick="openIPV()" /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/03.png" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
@@ -85,7 +85,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipl-2.png" alt="..." onclick="openIPL()" /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/03.png" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
