--- a/home.html
+++ b/home.html
@@ -8,8 +8,6 @@
     <meta name="author" content="" />
     <title>Home - Brightstart</title>
     <link rel="icon" type="image/x-icon" href="imgs/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
@@ -22,15 +20,15 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <img class="navbar-brand logo" href="#page-top" src="imgs/logodeloitte.svg" alt="..." />
+            <img class="navbar-brand logo" onclick="topFunction()" href="#top" src="imgs/logodeloitte.svg" alt="..." />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
-                    <li class="nav-item"><a class="nav-link" href="#!">Início</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Contactos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Sobre</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Inscrição</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Ainda num sei</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">Início</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactos.html">Contactos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre</a></li>
+                    <li class="nav-item"><a class="nav-link" href="inscricao.html">Inscrição</a></li>
+                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Ainda num sei</a></li>
                 </ul>
             </div>
         </div>
