--- a/inscricao.html
+++ b/inscricao.html
@@ -40,16 +40,16 @@
         <div class="masthead-content">
             <div class="container px-5">
                 <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0">Descobre como contactar os politécnicos aderentes!</h2>
+                <h2 class="masthead-subheading mb-0">Já decidiste que te queres inscrever? Fá-lo aqui!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
     </header>
     <!-- Content section 1-->
     <form class="form">
+        <label for="inputReason">Razão de contacto</label>
         <select class="custom-select custom-select-sm">
-            <option selected>Razão de contacto</option>
-            <option value="Ins">Inscrição</option>
+            <option selected value="Ins">Inscrição</option>
             <option value="Duv">Dúvidas</option>
             <option value="Sug">Sugestão</option>
         </select>
