--- a/testemunho.html
+++ b/testemunho.html
@@ -43,7 +43,7 @@
         <div class="masthead-content">
             <div class="container px-5">
                 <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0">Descobre como contactar os politécnicos aderentes!</h2>
+                <h2 class="masthead-subheading mb-0">Queres ler opiniões de colegas de BrightStart? Vê abaixo!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
@@ -53,12 +53,12 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/01.png" alt="..." /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/joao.png" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Setúbal</h2>
-                        <p class="paragraphs">Email: brightstart@deloitte.pt<br>Telefone: 210 422 932</p>
+                        <h2 class="display-4">João Godinho</h2>
+                        <p class="paragraphs">Lorem Ipsum</p>
                     </div>
                 </div>
             </div>
@@ -68,13 +68,13 @@
     <section>
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
-                <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/03.png" alt="..." /></div>
+                <div class="col-lg-6">
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/jorge.png" alt="..." /></div>
                 </div>
-                <div class="col-lg-6 order-lg-1">
+                <div class="col-lg-6">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Viseu</h2>
-                        <p class="paragraphs">Email: brightstartIPV@deloitte.pt<br>Telefone: 210 422 934</p>
+                        <h2 class="display-4">Jorge Miguel</h2>
+                        <p class="paragraphs">lorem ipsmu</p>
                     </div>
                 </div>
             </div>
@@ -85,13 +85,12 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/03.png" alt="..." /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/archie.png" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Leiria</h2>
-                        <p class="paragraphs">Email: brightstartIPL@deloitte.pt<br>Telefone: 210 422 935
-                        </p>
+                        <h2 class="display-4">Archiebald Longman</h2>
+                        <p class="paragraphs">lorem ipsmu</p>
                     </div>
                 </div>
             </div>
