--- a/sobre.html
+++ b/sobre.html
@@ -43,7 +43,7 @@
         <div class="masthead-content">
             <div class="container px-5">
                 <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0">Descobre como contactar os politécnicos aderentes!</h2>
+                <h2 class="masthead-subheading mb-0">Tens curiosidade? Consulta as informações abaixo!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
@@ -53,50 +53,22 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/01.png" alt="..." /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/02.png" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Setúbal</h2>
-                        <p class="paragraphs">Email: brightstart@deloitte.pt<br>Telefone: 210 422 932</p>
+                        <h2 class="display-4">Sobre o BrightStart</h2>
+                        <p class="paragraphs-small">O BrightStart é um programa de aceleração de competências para os finalistas do ensino secundário que pretendam ingressar na área das Tecnologias Informáticas. É uma oportunidade para adquirirem, enquanto estudam, conhecimentos
+                            e competências práticas em ambiente real de trabalho.<br><br>Este programa pretende ter uma abrangência nacional, tendo sido lançado pela primeira vez em 2017 no Instituto Politécnico de Setúbal. Face ao sucesso alcançado,
+                            em 2019, arrancou no Politécnico de Leiria e no Instituto Politécnico de Viseu.<br><br> A participação no programa está sujeita a um processo de seleção definido e implementado pelas entidades gestoras do programa (Deloitte
+                            e respetivos Politécnicos). Após a candidatura, os estudantes são selecionados através de uma dinâmica de grupo, uma entrevista com um Manager e um Sócio da Deloitte.<br><br> Os candidatos selecionados terão as propinas asseguradas
+                            pela Deloitte ao longo de todo o curso e, adicionalmente, serão remunerados com uma bolsa mensal pela sua participação nos projetos da Deloitte.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Content section 2-->
-    <section>
-        <div class="container px-5">
-            <div class="row gx-5 align-items-center">
-                <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/03.png" alt="..." /></div>
-                </div>
-                <div class="col-lg-6 order-lg-1">
-                    <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Viseu</h2>
-                        <p class="paragraphs">Email: brightstartIPV@deloitte.pt<br>Telefone: 210 422 934</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Content section 3-->
-    <section>
-        <div class="container px-5">
-            <div class="row gx-5 align-items-center">
-                <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/03.png" alt="..." /></div>
-                </div>
-                <div class="col-lg-6 order-lg-1">
-                    <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Leiria</h2>
-                        <p class="paragraphs">Email: brightstartIPL@deloitte.pt<br>Telefone: 210 422 935
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <!-- Footer-->
     <footer class="py-5">
         <img class="m-0 footer-img" src="css/edificioDeloitte.png" alt="..." /></p>
