Pagina de testemunhos
Pimba

--- a/contactos.html
+++ b/contactos.html
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
                     <li class="nav-item"><a class="nav-link" href="home.html">Início</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactos.html">Contactos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactos.html" style="color: #75B625;">Contactos</a></li>
                     <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre</a></li>
                     <li class="nav-item"><a class="nav-link" href="inscricao.html">Inscrição</a></li>
-                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Ainda num sei</a></li>
+                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Testemunhos</a></li>
                 </ul>
             </div>
         </div>
