--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link" href="contactos.html">Contactos</a></li>
                     <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre</a></li>
                     <li class="nav-item"><a class="nav-link" href="inscricao.html">Inscrição</a></li>
-                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Ainda num sei</a></li>
+                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Testemunhos</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +41,7 @@
         <div class="masthead-content">
             <div class="container px-5">
                 <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0">O futuro pode ser brilhante !</h2>
+                <h2 class="masthead-subheading mb-0">O futuro pode ser brilhante! Agarra a oportunidade!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
