--- a/testemunho.html
+++ b/testemunho.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="contactos.html">Contactos</a></li>
                     <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre</a></li>
                     <li class="nav-item"><a class="nav-link" href="inscricao.html">Inscrição</a></li>
-                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Ainda num sei</a></li>
+                    <li class="nav-item"><a class="nav-link" href="testemunho.html" style="color: #75B625;">Testemunhos</a></li>
                 </ul>
             </div>
         </div>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Archiebald Longman</h2>
+                        <h2 class="display-4">Archie Longman</h2>
                         <p class="paragraphs">lorem ipsmu</p>
                     </div>
                 </div>
