--- a/inscricao.html
+++ b/inscricao.html
@@ -29,8 +29,8 @@
                     <li class="nav-item"><a class="nav-link" href="home.html">Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="contactos.html">Contactos</a></li>
                     <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre</a></li>
-                    <li class="nav-item"><a class="nav-link" href="inscricao.html">Inscrição</a></li>
-                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Ainda num sei</a></li>
+                    <li class="nav-item"><a class="nav-link" href="inscricao.html" style="color: #75B625;">Inscrição</a></li>
+                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Testemunhos</a></li>
                 </ul>
             </div>
         </div>
