--- a/sobre.html
+++ b/sobre.html
@@ -28,9 +28,9 @@
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
                     <li class="nav-item"><a class="nav-link" href="home.html">Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="contactos.html">Contactos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sobre.html" style="color: #75B625;">Sobre</a></li>
                     <li class="nav-item"><a class="nav-link" href="inscricao.html">Inscrição</a></li>
-                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Ainda num sei</a></li>
+                    <li class="nav-item"><a class="nav-link" href="testemunho.html">Testemunhos</a></li>
                 </ul>
             </div>
         </div>
