--- a/testemunho.html
+++ b/testemunho.html
@@ -58,7 +58,7 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">João Godinho</h2>
-                        <p class="paragraphs">"Com o programa BrightStart consegui estudar e aplicar o que aprendi num ambiente real de trabalho. O programa também engloba disciplinas que nenhum outro curso tem onde nos é ensinado a usar programas utilizados dentro da Deloitte."</p>
+                        <p class="paragraphs">"Com o programa BrightStart consegui adquirir múltiplos conhecimentos e aplicar os mesmos num ambiente real de trabalho."</p>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                 <div class="col-lg-6">
                     <div class="p-5">
                         <h2 class="display-4">Jorge Miguel</h2>
-                        <p class="paragraphs">"Ao concluir os meus estudos atravéz do programa BrightStart, as minhas oportunidades de trabalho futuras são mais vastas e tenho maior facilidade em encontrar um bom trabalho tendo experiência em uma empresa como a Deloitte."</p>
+                        <p class="paragraphs">" Após a conclusão do programa BrightStart, o mercado de trabalho tornou-se mais amplo devido às ferramentas que adquiri no programa e ao enriquecimento do meu CV, dado os anos de experiência numa empresa como a Delloite."</p>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Archie Longman</h2>
-                        <p class="paragraphs">"Gostei da interação entre os alunos e os membros da Deloitte, que também nos ajudaram a ultrapassar dificuldades que foram surgindo tanto nos estudos como no estágio."</p>
+                        <p class="paragraphs">"Um dos aspetos que mais apreciei neste programa, foi a interação professor-aluno, assim como a interação com os membros da Delloit, sendo que estas sempre foram úteis e agradáveis."</p>
                     </div>
                 </div>
             </div>
