--- a/testemunho.html
+++ b/testemunho.html
@@ -90,7 +90,7 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Archie Longman</h2>
-                        <p class="paragraphs">"Um dos aspetos que mais apreciei neste programa, foi a interação professor-aluno, assim como a interação com os membros da Delloit, sendo que estas sempre foram úteis e agradáveis."</p>
+                        <p class="paragraphs">"Um dos aspetos que mais apreciei neste programa, foi a interação professor-aluno, assim como a interação com os membros da Delloite, sendo que estas sempre foram úteis e agradáveis."</p>
                     </div>
                 </div>
             </div>
