--- a/contactos.html
+++ b/contactos.html
@@ -38,27 +38,43 @@
 
 
 
-    <!-- Header-->
-    <header class="masthead text-center text-white">
-        <div class="masthead-content">
-            <div class="container px-5">
-                <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0">Descobre como contactar os politécnicos aderentes!</h2>
-                <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
-            </div>
-        </div>
-    </header>
-    <!-- Content section 1-->
+    <!-- Content section 0-->
     <section id="scroll">
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid " src="imgs/ips.jpg" alt="..." onclick="openIPS()" /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/01.png" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Setúbal</h2>
-                        <p class="paragraphs">Email: brightstart@deloitte.pt<br>Telefone: 210 422 932</p>
+                        
+                        <img id="img1" src="imgs/header.png" srcset="imgs/header.png">
+
+                        <div id="Subtitulo1">
+                            <span style="font-weight:bold"> O futuro pode ser brilhante! </span> 
+                        </div>
+                
+                        <div id="Subtitulo2">
+                            <span> Descobre como contactar os Politécnicos <br> aderentes!  </span>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Content section 1-->
+    <section id="scroll">
+        <div class="container px-5" style="margin-top: 300px;">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="img-fluid " src="imgs/ips.jpg" alt="..." /></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2  style="font-size: 35px;"> <a href="https://www.ips.pt/ips_si/web_page.inicial"> Instituto Politécnico de Setúbal </a> </h2>
+                        <p class="paragraphs">brightstart@deloitte.pt<br>210 422 932</p>
                     </div>
                 </div>
             </div>
@@ -69,12 +85,12 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipv.jpg" alt="..." onclick="openIPV()" /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipv.jpg" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Viseu</h2>
-                        <p class="paragraphs">Email: brightstartIPV@deloitte.pt<br>Telefone: 210 422 934</p>
+                        <h2  style="font-size: 35px;"> <a href="https://www.ipv.pt/"> Instituto Politécnico de Viseu </a> </h2>
+                        <p class="paragraphs">brightstartIPV@deloitte.pt<br>210 422 934</p>
                     </div>
                 </div>
             </div>
@@ -85,26 +101,19 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipl-2.png" alt="..." onclick="openIPL()" /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipl-2.png" alt="..."/></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Leiria</h2>
-                        <p class="paragraphs">Email: brightstartIPL@deloitte.pt<br>Telefone: 210 422 935
+                        <h5 style="font-size: 35px;"> <a href="https://www.ipleiria.pt/"> Instituto Politécnico de Leiria </a> </h5>
+                        <p class="paragraphs">brightstartIPL@deloitte.pt<br>210 422 935
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Footer-->
-    <footer class="py-5">
-        <img class="m-0 footer-img" src="css/edificioDeloitte.png" alt="..." /></p>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+   
 </body>
 
 </html>
