--- a/inscricao.html
+++ b/inscricao.html
@@ -35,33 +35,16 @@
             </div>
         </div>
     </nav>
-
-    <!-- Content section 0-->
-    <section id="scroll">
-        <div class="container px-5" style="margin-top: 300px;">
-            <div class="row gx-5 align-items-center">
-                <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/01.png" alt="..." /></div>
-                </div>
-                <div class="col-lg-6 order-lg-1">
-                    <div class="p-5">
-                        
-                        <img id="img1" src="imgs/header.png" srcset="imgs/header.png">
-
-                        <div id="Subtitulo1">
-                            <span style="font-weight:bold"> O futuro pode ser brilhante! </span> 
-                        </div>
-                
-                        <div id="Subtituloinscricao">
-                            <span> Já decidiste que te queres inscrever? <br>Fá-lo aqui!  </span>
-                        </div>
-
-                    </div>
-                </div>
+    <!-- Header-->
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
+            <div class="container px-5">
+                <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
+                <h2 class="masthead-subheading mb-0">Já decidiste que te queres inscrever? Fá-lo aqui!</h2>
+                <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
-    </section>
-
+    </header>
     <!-- Content section 1-->
     <form class="form">
         <label for="inputReason">Razão de contacto</label>
@@ -96,7 +79,14 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-  
+    <!-- Footer-->
+    <footer class="py-5">
+        <img class="m-0 footer-img" src="css/edificioDeloitte.png" alt="..." /></p>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
