--- a/sobre.html
+++ b/sobre.html
@@ -36,32 +36,18 @@
         </div>
     </nav>
 
-    <!-- Content section 0-->
-    <section id="scroll">
-        <div class="container px-5" style="margin-top: 300px;">
-            <div class="row gx-5 align-items-center">
-                <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/01.png" alt="..." /></div>
-                </div>
-                <div class="col-lg-6 order-lg-1">
-                    <div class="p-5">
-                        
-                        <img id="img1" src="imgs/header.png" srcset="imgs/header.png">
 
-                        <div id="Subtitulo1">
-                            <span style="font-weight:bold"> O futuro pode ser brilhante! </span> 
-                        </div>
-                
-                        <div id="Subtitulosobre">
-                            <span> Tens curiosidade? Consulta <br> as informações abaixo!  </span>
-                        </div>
 
-                    </div>
-                </div>
+    <!-- Header-->
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
+            <div class="container px-5">
+                <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
+                <h2 class="masthead-subheading mb-0">Tens curiosidade? Consulta as informações abaixo!</h2>
+                <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
-    </section>
-
+    </header>
     <!-- Content section 1-->
     <section id="scroll">
         <div class="container px-5">
@@ -83,7 +69,14 @@
         </div>
     </section>
 
-
+    <!-- Footer-->
+    <footer class="py-5">
+        <img class="m-0 footer-img" src="css/edificioDeloitte.png" alt="..." /></p>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
