Mudar umas coisas no css

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
     </nav>
 
 
-    <!-- Content section 0-->
+    <!-- Content section 0
     <section id="scroll">
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
@@ -63,9 +63,19 @@
                 </div>
             </div>
         </div>
-    </section>
-
-
+    </section>-->
+    <!-- Header -->
+        
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
+            <div class="container px-5">
+                <img class=" img-fluid rounded-circle" style="width: 20rem" src="imgs/02.png">
+                <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
+                <h2 class="masthead-subheading mb-0">Descobre como contactar os politécnicos aderentes!</h2>
+                <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
+            </div>
+        </div>
+    </header>
 
     <!-- Content section 1-->
     <a name="C4"> 
@@ -73,7 +83,7 @@
         <div class="container px-10" style="margin-top: 300px;">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" style="width: 80%;"; src="imgs/01.png" alt="..." /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" style="width: 80%;" src="imgs/01.png" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
