--- a/contactos.html
+++ b/contactos.html
@@ -50,15 +50,15 @@
     </header>
     <!-- Content section 1-->
     <section id="scroll">
-        <div class="container px-5">
+        <div class="container px-5" style="margin-top: 100px;">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid " src="imgs/ips.jpg" alt="..." onclick="openIPS()" /></div>
+                    <div class="p-5"><img class="img-fluid " src="imgs/ips.jpg" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Setúbal</h2>
-                        <p class="paragraphs">Email: brightstart@deloitte.pt<br>Telefone: 210 422 932</p>
+                        <h2  style="font-size: 30px;"> <a href="https://www.ips.pt/ips_si/web_page.inicial"> Instituto Politécnico de Setúbal </a> </h2>
+                        <p class="paragraphs">brightstart@deloitte.pt<br>210 422 932</p>
                     </div>
                 </div>
             </div>
@@ -69,12 +69,12 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipv.jpg" alt="..." onclick="openIPV()" /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipv.jpg" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Viseu</h2>
-                        <p class="paragraphs">Email: brightstartIPV@deloitte.pt<br>Telefone: 210 422 934</p>
+                        <h2  style="font-size: 30px;"> <a href="https://www.ipv.pt/"> Instituto Politécnico de Viseu </a> </h2>
+                        <p class="paragraphs">brightstartIPV@deloitte.pt<br>210 422 934</p>
                     </div>
                 </div>
             </div>
@@ -85,12 +85,12 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipl-2.png" alt="..." onclick="openIPL()" /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipl-2.png" alt="..."/></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Instituto Politécnico de Leiria</h2>
-                        <p class="paragraphs">Email: brightstartIPL@deloitte.pt<br>Telefone: 210 422 935
+                        <h5 style="font-size: 30px;"> <a href="https://www.ipleiria.pt/"> Instituto Politécnico de Leiria </a> </h5>
+                        <p class="paragraphs">brightstartIPL@deloitte.pt<br>210 422 935
                         </p>
                     </div>
                 </div>
@@ -98,13 +98,35 @@
         </div>
     </section>
     <!-- Footer-->
-    <footer class="py-5">
-        <img class="m-0 footer-img" src="css/edificioDeloitte.png" alt="..." /></p>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+
+    <footer class="footer-distributed">
+
+
+        <div class="footer-left"> 
+                <h3>Bright<span>Start</span></h3>
+                <p class="footer-company-name">Deloitte</p>
+            </div>
+
+            <div class="footer-center">
+                
+                <p class="footer-links">
+                    <a style="color: white;" href="Home.html">Home</a> 
+                    <br> <a href="Home.html">Contactos</a>
+                    <br> <a style="color: white;" href="Home.html">Sobre</a> 
+                    <br> <a style="color: white;"href="Home.html">Inscrição</a> 
+                    <br> <a style="color: white;" href="Home.html">Testemunhos</a>
+                </p>
+            </div>
+
+            <div class="footer-right">
+
+                <p class="footer-company-about">
+                    <span>Mais Informações</span>
+                    A Deloitte abrange ao Programa BrightStart com oferta de bolsas de estudo e propinas na área tecnológica!
+                </p>
+
+
+            </div>
 </body>
 
 </html>
