--- a/inscricao.html
+++ b/inscricao.html
@@ -80,13 +80,35 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     <!-- Footer-->
-    <footer class="py-5">
-        <img class="m-0 footer-img" src="css/edificioDeloitte.png" alt="..." /></p>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    
+    <footer class="footer-distributed">
+
+
+        <div class="footer-left"> 
+                <h3>Bright<span>Start</span></h3>
+                <p class="footer-company-name">Deloitte</p>
+            </div>
+
+            <div class="footer-center">
+                
+                <p class="footer-links">
+                    <a style="color: white;" href="Home.html">Home</a> 
+                    <br> <a style="color: white;" href="Home.html">Contactos</a>
+                    <br> <a style="color: white;" href="Home.html">Sobre</a> 
+                    <br> <a href="Home.html">Inscrição</a> 
+                    <br> <a style="color: white;" href="Home.html">Testemunhos</a>
+                </p>
+            </div>
+
+            <div class="footer-right">
+
+                <p class="footer-company-about">
+                    <span>Mais Informações</span>
+                    A Deloitte abrange ao Programa BrightStart com oferta de bolsas de estudo e propinas na área tecnológica!
+                </p>
+
+
+            </div>
 </body>
 
 </html>
